[package]
name = "keyforge_grab"
version = "0.1.0"
authors = ["hen <dev@flamefew.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"

[dependencies.reqwest]
version = "0.10.0"
features = ["blocking"]
